--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes by Jeus Bautista</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/carbonara.html">Carbonara Recipe</a>
+    <a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a>
 </body>
 </html>
