Add link for recipe page of lasagna
Recipe page for lasagna was added to the index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/carbonara.html">Carbonara Recipe</a>
     <a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a>
+    <a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a>
 </body>
 </html>
