--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/carbonara.html">Carbonara Recipe</a>
-    <a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a>
-    <a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a>
+    <p><a href="recipes/carbonara.html">Carbonara Recipe</a></p>
+    <p></p><a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></p>
+    <p></p><a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></p>
 </body>
 </html>
