--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -38,15 +38,24 @@
     <h3>Steps</h3>
     <ol>
         <li>Gather all your ingredients.</li>
+        <img src="https://www.allrecipes.com/thmb/mdskfiE9GEKGGibzaRpKQhx7wKs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-01-1064-5dd7c3348e624ec2a266785d22dd52e3.jpg" alt="ingredients">
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
+        <img src="https://www.allrecipes.com/thmb/J-Wh5lIkEjeEJiORbpOxvAqcnjE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-01-1-1066-a60ebdd7ec5a40ed8754b1f4df8ff1f4.jpg" alt="cooked ground beef">
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+        <img src="https://www.allrecipes.com/thmb/T3HZ-_q4t0bhYzOxgeSY1Qmw3I4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-02-1079-42d9226098f54647a6d052fc836d3a79.jpg" alt="stirred ingredients">
         <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
+        <img src="https://www.allrecipes.com/thmb/KE3d3Tc_BHZx_BOjDupa6wUu2rU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-03-1065-3a965c2fd99344a7aee647cabc22f3a4.jpg" alt="lasagna noodles">
         <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
+        <img src="https://www.allrecipes.com/thmb/G_x4bayGX4F-1NGg7Ujbi8e25JQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-04-1071-882506befd1744c0857897a6604c21da.jpg" alt="mixing bowl">
         <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
         <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
+        <img src="https://www.allrecipes.com/thmb/4p93Il_qxCZHprrmqcRHc5DMTd4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-09-1077-69a136de5295490d9c072b8971b65848.jpg" alt="assembling of ingredients">
         <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
+        <img src="https://www.allrecipes.com/thmb/r_0eWmiQiB_FgIhVEPIeAhW23is=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-11-1081-cc17503b338f465580ef6a42fe7ce80f.jpg" alt="repeat assembling">
         <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
+        <img src="https://www.allrecipes.com/thmb/PZy4A0Hzw54A2TOaVadF5na0uik=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-12-1164-f66803089cf547bf8470f06943bdc8c4.jpg" alt="cooked lasagna">
         <li>Rest lasagna for 15 minutes before serving.</li>
+        <img src="https://www.allrecipes.com/thmb/lJKo8R_F8xfqyf_r5pWRMrHCu94=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="final product">
         
     </ol>
 
