Change spacing of Recipe List
Changed the listing of recipe list from paragraph element to unordered list.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/carbonara.html">Carbonara Recipe</a></p>
-    <p></p><a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></p>
-    <p></p><a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></p>
+    <ul>
+        <li><a href="recipes/carbonara.html">Carbonara Recipe</a></li>
+        <li><a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></li>
+        <li><a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></li>
+    </ul>
 </body>
 </html>
