--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -12,7 +12,7 @@
     <p>This <em>fettuccine</em> carbonara is a delectable, mouth-watering pile of yummy goodness! I <strong>recommend</strong> a nice salad with it — that's all you will need for a complete meal.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>5 teaspoons olive oil</li>truffle pizza
+        <li>5 teaspoons olive oil truffle pizza</li>
         <li>4 shallots, diced</li>
         <li>1 pound bacon, cut into strips</li>
         <li>1 large onion, cut into thin strips</li>
