--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <h1>World's Best Lasagna</h1>
     <img src="https://www.simplyrecipes.com/thmb/pCT0hoPM_GUZx-dT0BLUHkFCndw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Best-Classic-Lasagna-Lead-1-b67f9c8bb82448d7ac34807d0d62244e.jpg" alt="Creamy Lasagna">
     <h2>The Best Homemade Lasagna</h2>
-    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank" rel="noopener noreferer">read all about his life and legacy here.</a> 
+    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank" rel="noopener noreferer"> read all about his life and legacy here.</a> 
     Make our most popular lasagna today to find out what all the fuss is about!
     </p>
     <h3>Ingredients</h3>
@@ -42,7 +42,7 @@
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
         <img src="https://www.allrecipes.com/thmb/J-Wh5lIkEjeEJiORbpOxvAqcnjE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-01-1-1066-a60ebdd7ec5a40ed8754b1f4df8ff1f4.jpg" alt="cooked ground beef">
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
-        <img src="https://www.allrecipes.com/thmb/T3HZ-_q4t0bhYzOxgeSY1Qmw3I4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-02-1079-42d9226098f54647a6d052fc836d3a79.jpg" alt="stirred ingredients">
+        <img src="https://www.allrecipes.com/thmb/T3HZ-_q4t0bhYzOxgeSY1Qmw3I4=/750x0/cipes$ git comming cc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-02-1079-42d9226098f54647a6d052fc836d3a79.jpg" alt="stirred ingredients">
         <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
         <img src="https://www.allrecipes.com/thmb/KE3d3Tc_BHZx_BOjDupa6wUu2rU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-step-03-1065-3a965c2fd99344a7aee647cabc22f3a4.jpg" alt="lasagna noodles">
         <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
