Add basic style.css to the original file
Added basic colorings, font, alignment and practiced grouping and chaining of classes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>World's Best Lasagna</h1>
+    <h1 style="color: darksalmon;">World's Best Lasagna</h1>
     <img src="https://www.simplyrecipes.com/thmb/pCT0hoPM_GUZx-dT0BLUHkFCndw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Best-Classic-Lasagna-Lead-1-b67f9c8bb82448d7ac34807d0d62244e.jpg" alt="Creamy Lasagna">
     <h2>The Best Homemade Lasagna</h2>
     <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — <a href="https://www.allrecipes.com/longform/john-chandler-worlds-best-lasagna/" target="_blank" rel="noopener noreferer"> read all about his life and legacy here.</a> 
