--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes by Jeus Bautista</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/carbonara.html">Carbonara Recipe</a></li>
-        <li><a href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></li>
-        <li><a href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></li>
+        <li><a class="carbonara" href="recipes/carbonara.html">Carbonara Recipe</a></li>
+        <li><a class="bakedmac" href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></li>
+        <li><a class="lasagna" href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></li>
     </ul>
 </body>
 </html>
