--- a/recipes/baked-macaroni-and-cheese.html
+++ b/recipes/baked-macaroni-and-cheese.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baked Macaroni and Cheese</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Baked Macaroni and Cheese</h1>
+    <h1 style="color: bisque ;">Baked Macaroni and Cheese</h1>
     <img src="https://assets.unileversolutions.com/recipes-v2/110282.jpg?imwidth=1200" alt="Baked Macaroni">
     <h2>Baked Homemade Macaroni and Cheese</h2>
     <p>This kiddie favorite dish combines the rich flavor of beef, vegetable aromatics and the creamy tomato sauce, topped with a generous amounts of cheese.</p>
