--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Carbonara Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Carbonara Recipe</h1>
+    <h1 style="color: cadetblue;">Carbonara Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/Pzq7XiMfScFsgjpYULJaZVfWOeI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8988638-db4bfa51c1d445129d16ecac0afa95a6.jpg" alt="carbonara photo">
     <h2>A Special Carbonara Recipe</h2>
     <p>This <em>fettuccine</em> carbonara is a delectable, mouth-watering pile of yummy goodness! I <strong>recommend</strong> a nice salad with it — that's all you will need for a complete meal.</p>
