--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1 class="title">Odin Recipes</h1>
     <ul>
+        <div>
         <li><a class="carbonara" href="recipes/carbonara.html">Carbonara Recipe</a></li>
         <li><a class="bakedmac" href="recipes/baked-macaroni-and-cheese.html">Bake Macaroni and Cheese Recipe</a></li>
         <li><a class="lasagna" href="recipes/lasagna.html">Best Homemade Lasagna Recipe</a></li>
+    </div>
     </ul>
 </body>
 </html>
